# KnapsackGeneticAlgorithm

./: .gitignore  README.md  TODO.md  pom.xml  pyproject.toml
analysis/-1_evaluations/: exec_time_aggregated_statistics_-1_evaluations.csv  exec_time_table.tex  fitness_aggregated_statistics_-1_evaluations.csv  fitness_table.tex  problem_0.tex  problem_1.tex  problem_2.tex  problem_3.tex  problem_4.tex  problem_5.tex  problem_6.tex  stat_test_results.csv  stat_test_wins_count.csv  wilcoxon_pvalues.csv
analysis/10000_evaluations/: exec_time_aggregated_statistics_10000_evaluations.csv  exec_time_table.tex  fitness_aggregated_statistics_10000_evaluations.csv  fitness_table.tex  problem_0.tex  problem_1.tex  problem_2.tex  problem_3.tex  problem_4.tex  problem_5.tex  problem_6.tex  stat_test_results.csv  stat_test_wins_count.csv  wilcoxon_pvalues.csv
analysis/1000_evaluations/: exec_time_aggregated_statistics_1000_evaluations.csv  exec_time_table.tex  fitness_aggregated_statistics_1000_evaluations.csv  fitness_table.tex  problem_0.tex  problem_1.tex  problem_2.tex  problem_3.tex  problem_4.tex  problem_5.tex  problem_6.tex  stat_test_results.csv  stat_test_wins_count.csv  wilcoxon_pvalues.csv
data/: README.md  results.parquet
scripts/: download_problem_data_mknap1.sh  run.sh
scripts/analysis/: 1_exec_time_stats_calculate.py  1_fitness_stats_calculate.py  2_exec_time_stats_plot.py  2_fitness_stats_plot.py  2b_get_data_latex_tables.py  3a_wilcoxon_test.py  3b_wilcoxon_analysis.py  load_results.py
scripts/experiments/: experiment_all.sh
(+35 files in other folders)
