[tool.poetry]
name = "knapsack-genetic-algorithm-analysis"
version = "0.1.0"
description = ""
authors = ["Javier Vela <javier.vela00@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
pyarrow = "^18.0.0"
tabulate = "^0.9.0"
tqdm = "^4.67.0"
